terraform-files/input-example.tf
provider "aws" {
  region = "ap-south-1"
}

variable "input_vpc_name" {
  type = string
  description = "enter desired vpc name"
}

resource "aws_vpc" "myvpc" {
    cidr_block = "10.0.0.0/16"
    tags = {
       Name = var.input_vpc_name
    }
}
